--- a/web/css/index.css
+++ b/web/css/index.css
@@ -56,6 +56,7 @@ h1{
 #content #buttons{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 #content #buttons #add{
